# AncestryLLM

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEDCOM_INCREMENTAL_HANDOFF_2026-07-16.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.hosted.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  sync-wiki.yml
docs/: ADR-0024-provider-framework-evaluation.md  CLI.md  CONSOLE.md  ENCRYPTED_BACKUPS.md  GEDCOM_COMPATIBILITY.md  Home.md  LOCAL_LLM_BENCHMARKS.md  LOCAL_RETRIEVAL_EVALUATION.md  MODULE_AUTHORING.md  PRIVACY_AND_CONSENT.md  PROVIDERS.md  REPL_ARCHITECTURE.md  SECURITY_RESPONSE.md  SETUP_DIAGNOSTICS.md  THREAT_MODEL.md  WIKI_OPERATIONS.md  WIKI_SYNC.md  WIKI_SYNC_E2E_PROBE.md  _Sidebar.md
docs/release-evidence/: issue-10-import-smoke-tests.md
family_trees/: .gitkeep
scripts/: benchmark_local_llm.py  benchmark_provider_frameworks.py  check_repository_safety.sh  commit_wiki_changes.py  doctor.sh  gedcom_merge_quickstart.sh  quickstart.sh  rewrite_wiki_links.py  setup-dev-tools.sh  sync_wiki_docs.py  validate_wiki_docs.py
src/ancestryllm/: __init__.py  __main__.py  cli.py
src/ancestryllm/console/: __init__.py  app.py  command_sets.py  completion.py  gedcom.py  history.py  multiline.py  ocr.py  parser.py  people.py  presentation.py  progress.py  prompts.py  providers.py  rootsmagic.py  router.py  secrets.py  security.py  shell.py
src/ancestryllm/core/: config.py  context.py  errors.py  jobs.py  modules.py  secrets.py
src/ancestryllm/domain/: __init__.py  models.py
tests/: test_doctor.py  test_gedcom_duplicate_benchmark.py  test_gedcom_duplicate_performance.py  test_gedcom_merge.py  test_gedcom_quality.py  test_gemini_transcription.py  test_llm_providers_live.py  test_local_llm_benchmark.py  test_presentation.py  test_provider_framework_benchmark.py  test_router.py  test_setup.py  test_system_setup.py  test_wiki_commit.py  test_wiki_link_rewrite.py  test_wiki_sync.py  test_wiki_sync_workflow.py  test_wiki_validation.py
tests/modular/: conftest.py  test_cli_console.py  test_command_specs.py  test_console_security.py  test_incremental.py  test_jobs.py  test_llm_policy.py  test_llm_provider_contracts.py  test_llm_providers.py  test_prompts_people.py  test_repl_completion.py  test_repl_history.py  test_repl_progress.py  test_repl_router.py  test_repl_shell.py  test_rootsmagic_export.py  test_storage.py
tools/: GEDCOM_MERGE_QUICKSTART.md  README.md  RESUME_NOTES.md  bootstrap.py  gedcom_incremental.py  gedcom_merge.py  gemini_transcription.py  sql_router.py  system_setup.py
(+52 files in other folders)
